<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

    <ImageView
        android:id="@+id/imageButton1"
        android:layout_width="277dp"
        android:layout_height="235dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="388dp"


        android:src="@drawable/pp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVis1" />

    <TextView
        android:id="@+id/textVis1"
        android:layout_width="403dp"
        android:layout_height="35dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="664dp"
        android:text="@string/tap"

        android:textAlignment="center"
        android:textColor="#99FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="121dp"
        android:fontFamily="sans-serif"
        android:text="@string/yourtxt"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/message1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="272dp"
        android:fontFamily="sans-serif"
        android:text="@string/yourkey"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/secret_key1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <TextView
        android:id="@+id/message1"
        android:layout_width="207dp"
        android:layout_height="86dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/custom_buttons"
        android:inputType="textCapSentences|textMultiLine"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <EditText
        android:id="@+id/secret_key1"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/custom_buttons"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/decode_button1"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_buttons2"
        app:layout_constraintBottom_toTopOf="@+id/message1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret_key1"
        tools:text="@string/decode" />


</androidx.constraintlayout.widget.ConstraintLayout>